# EduAutoEval

./: .gitignore  README.md  学生评估问卷列表.html  方案一-浏览器控制台脚本.md  方案三-Python自动化脚本.md  方案二-油猴脚本Tampermonkey.md  方案对比与推荐.md  问卷评估.html
js-scripts/: README.md  console-script.js  tampermonkey-script.user.js
python-implementation/: README.md  auto_evaluation.py  pyproject.toml  start.bat  start.sh
学生评估问卷列表_files/: ace.min.css  commoncss.css  coursetable.js  font-awesome.min.css  fonts-woff2.css  kcbcolor.css  kcbcolor.js  pagination.js  urpalert.js
